--- a/style.css
+++ b/style.css
@@ -1,28 +1,32 @@
 @charset "UTF-8";
- body{ 
+ .all{ 
   margin: 0;
   max-width: 400px;
   max-height: 100%;
   }
-  main:after{
-    content: "";
-    display: block;
-    clear: both;
-  }
+  
     .red-box{
       position: relative;
       width: 400px;
       height: 100px;
       background: #ff0000;
     }
+    .cleafix:after{
+      content: "";
+      display: block;
+      clear: both;
+    }
     .green-box{
       position: absolute;
+      float: left;
       width: 150px;
       height: 250px;
       background: #00ff1e;
     }
     .blue-box{
+      float: right;
       height: 250px;
+      width:250px;
       background: #3300ff;
     }
     .yellow-box{
