--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 @charset "UTF-8";
- .all{ 
-  margin: 0;
-  max-width: 400px;
-  max-height: 100%;
-  }
+  /* .all{ 
+  width: 400px;
+  } */
   
     .red-box{
       position: relative;
@@ -17,14 +15,15 @@
       clear: both;
     }
     .green-box{
-      position: absolute;
+      /* position: absolute; */
       float: left;
       width: 150px;
       height: 250px;
       background: #00ff1e;
     }
     .blue-box{
-      float: right;
+      float: left;
+      /* float: right; */
       height: 250px;
       width:250px;
       background: #3300ff;
@@ -32,4 +31,5 @@
     .yellow-box{
       height: 100px;
       background: #ffe600;
+      width: 400px;
     }
